@@ -1,3 +1,4 @@
+*) 2018/06/06 - release of libxc-4.2.1
 *) 2018/06/04 - release of libxc-4.2.0
 *) 2018/05/09 - release of libxc-4.1.1
 *) 2018/05/07 - release of libxc-4.1.0
